fixed display issue of ag-grid text overflow

--- a/client/src/app/checkout/checkout.component.scss
+++ b/client/src/app/checkout/checkout.component.scss
@@ -49,8 +49,8 @@ hr { margin: 0.5rem 0; grid-column: 1 / 3; width: 100%; }
 .grand-total { font-weight: 500; color: olivedrab !important;}
 
 .checkout-input { 
-    padding: 2.5rem 1.5rem;
-    grid-template-columns: 55% 35%; 
+    padding: 2.5rem 0;
+    grid-template-columns: 60% 35%; 
     margin-bottom: 25vh;
     background: white;
     border: 1px solid rgb(190, 190, 190);
