--- a/client/src/app/posting-form/posting-form.component.scss
+++ b/client/src/app/posting-form/posting-form.component.scss
@@ -51,7 +51,7 @@ form {
     letter-spacing: 3px;
     text-align: center;
     height: fit-content;
-    width: 60%; 
+    width: 100%; 
     background: gold;
     box-shadow: 0 0 1px;
     z-index: 1;
