--- a/client/src/app/review/review.component.scss
+++ b/client/src/app/review/review.component.scss
@@ -49,6 +49,7 @@
     font-weight: 700;
     letter-spacing: 0.025rem;
     color: darkolivegreen;
+    border-left: 5px solid darkolivegreen;
     border-bottom: 2px solid darkolivegreen;
     box-shadow: 0 0 3px grey;
 }
